--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@pinia/nuxt": "^0.11.1"
   }
 }
