--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@pinia/nuxt": "^0.11.1"
+    "@nuxt/test-utils": "^3.19.2",
+    "@pinia/nuxt": "^0.11.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^26.1.0",
+    "vitest": "^3.2.4"
   }
 }
