--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "types": [
+      "vitest/globals",
+      "@nuxt/types",
+      "@pinia/nuxt",
+    ]
+  }
 }
