--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.5.2",
@@ -21,6 +23,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@pinia/nuxt": "^0.11.1"
+    "@nuxt/test-utils": "^3.19.2",
+    "@pinia/nuxt": "^0.11.1",
+    "@types/node": "^24.0.13",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^26.1.0",
+    "vitest": "^3.2.4"
   }
 }
